# gmx_python_sdk

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
example_scripts/: create_decrease_order.py  create_decrease_order_with_known_positions.py  create_deposit_order.py  create_increase_order.py  create_swap_order.py  create_withdraw_order.py  estimate_swap_output.py  get_gmx_stats.py  get_liquidation_price.py  get_positions.py  identify_farming_opportunities.py  setting_config.py  utils.py  working_liq_calc.py
gmx_python_sdk/contracts/: balance_abi.json  token_approval.json
gmx_python_sdk/contracts/arbitrum/: datastore.json  exchangerouter.json  glvreader.json  syntheticsreader.json  syntheticsrouter.json
gmx_python_sdk/contracts/avalanche/: depositvault.json  eventemitter.json  exchangerouter.json  syntheticsreader.json
gmx_python_sdk/data_store/: placeholder.txt
gmx_python_sdk/scripts/v2/: approve_token_for_spend.py  gas_utils.py  gmx_utils.py  keys.py
gmx_python_sdk/scripts/v2/get/: get.py  get_available_liquidity.py  get_borrow_apr.py  get_claimable_fees.py  get_contract_balance.py  get_funding_apr.py  get_glv_stats.py  get_gm_prices.py  get_markets.py  get_open_interest.py  get_open_positions.py  get_oracle_prices.py  get_pool_tvl.py  test.py
gmx_python_sdk/scripts/v2/order/: create_decrease_order.py  create_deposit_order.py  create_increase_order.py  create_swap_order.py  create_withdrawal_order.py  deposit.py  liquidity_argument_parser.py  order.py  order_argument_parser.py  withdraw.py
